--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,10 @@ gradle-app.setting
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
+*.iml
 .idea/**/workspace.xml
+.idea/**/misc.xml
+.idea/**/vcs.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
@@ -48,7 +51,7 @@ gradle-app.setting
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
-# .idea/modules.xml
+.idea/modules.xml
 # .idea/*.iml
 # .idea/modules
 
