--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'idea'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -10,6 +11,7 @@ repositories {
 }
 
 dependencies {
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
     compile 'org.slf4j:slf4j-api:1.7.25'
     testCompile 'junit:junit:4.12'
 	testCompile 'org.mockito:mockito-core:2.+'
