--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 }
 
 jar {
-	baseName = 'OpenMLava'
+	baseName = 'MrBrain'
 
 	manifest {
 		attributes 'Implementation-Title': 'Mr. Brain',
