--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ gradle-app.setting
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/**/codeStyleConfig.xml
 
 # Generated files
 .idea/**/contentModel.xml
